[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/HUD.gd" id="1"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 100.0

[node name="LoopLabel" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Loop: 1"

[node name="RelicLabel" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Relics: 0/25"

[node name="HotbarContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -60.0
offset_right = 200.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
